chore: add compilerOptions for jsx

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,4 +1,7 @@
 {
-  "compilerOptions": { "baseUrl": "src" },
+  "compilerOptions": {
+    "jsx": "react",
+    "baseUrl": "src"
+  },
   "include": ["src"]
 }
