--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start-mac": "NODE_OPTIONS='--experimental-specifier-resolution=node' nodemon index.js",
-    "start-window": "set NODE_OPTIONS=--experimental-specifier-resolution=node && nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
