--- a/server/package.json
+++ b/server/package.json
@@ -15,17 +15,22 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "google-auth-library": "^9.0.0",
     "imgur": "^2.3.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "tslib": "^2.6.2"
+    "path": "^0.12.7",
+    "tslib": "^2.6.2",
+    "url": "^0.11.3"
   }
 }
