--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "google-auth-library": "^9.0.0",
+    "googleapis": "^126.0.1",
     "imgur": "^2.3.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
